syntax = "proto3";

package bonder.auth.grpc;

message GrpcUser {
	string id = 1;
	string user_name = 2;
	bool is_admin = 3;
}

service AuthService {
  rpc GetUserById(GetUserByUserNameRequest) returns (GrpcUser);
  rpc GetUserByToken(GetUserByTokenRequest) returns (GetUserByTokenResponse);
}

message GetUserByUserNameRequest {
	string user_id = 1;
}

message GetUserByTokenRequest{
	string token = 1;
}

message GetUserByTokenResponse{
	string user_id = 1;
}